<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>Robot with RViz2 and Gazebo using ROS 2</description>
  <maintainer email="guygan2002@gmail.com">guygan</maintainer>
  <license>MIT</license>

  <!-- build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- dependencies -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>
  <depend>slam_toolbox</depend>

  <!-- Gazebo + ROS-Gazebo bridge -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- LIDAR sensor -->
  <exec_depend>sensor_msgs</exec_depend>

  <!-- optional but useful -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- export xacro -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
