<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>Robot with RViz2 and Gazebo using ROS 2</description>
  <maintainer email="guygan2002@gmail.com">guygan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>robot_localization</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

